--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ add_library(navigation_utils    src/navigation_utils.cpp)
 ## Declare a cpp executable
 # add_executable(explo_octo_3d_node src/explo_octo_3d_node.cpp)
 add_executable(navigation           src/navigation_utils.cpp)
-add_executable(mutual_info          src/mutual_info.cpp)
+add_executable(explo_gp             src/gp_explo_jackal.cpp)
 add_executable(simu_explo           src/explo_octo_3d_node.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
 add_executable(simu_gazebo          src/simu_gazebo.cpp)
 add_executable(save_to_ply          src/save_ply.cpp)
@@ -144,7 +144,7 @@ add_executable(isam_ros             src/isam_example.cpp)
 #   ${catkin_LIBRARIES}
 # )
 
-target_link_libraries(mutual_info
+target_link_libraries(explo_gp
   ${catkin_LIBRARIES}
   ${OCTOMAP_LIBRARIES}
   navigation_utils
