--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,15 +123,15 @@ include_directories(
 # )
 
 add_library(navigation_utils    src/navigation_utils.cpp)
-# add_library(explo_octo_3d_node  src/gpregressor.cpp)
-# add_library(explo_octo_3d_node  src/covMaterniso3.cpp)
+# add_library(gpregressor         src/gpregressor.cpp)
+# add_library(gpregressor         src/covMaterniso3.cpp)
 
 ## Declare a cpp executable
 # add_executable(explo_octo_3d_node src/explo_octo_3d_node.cpp)
 add_executable(navigation           src/navigation_utils.cpp)
-add_executable(explo_sam_2d         src/explo_sam_2d.cpp)
-add_executable(simu_explo           src/explo_octo_3d_node.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
-add_executable(simu_gazebo          src/simu_gazebo.cpp)
+add_executable(explo_sam_2d         src/explo_sam_2d.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
+# add_executable(simu_explo           src/explo_octo_3d_node.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
+# add_executable(simu_gazebo          src/simu_gazebo.cpp)
 add_executable(save_to_ply          src/save_ply.cpp)
 add_executable(isam_ros             src/isam_example.cpp)
 add_executable(scan_to_pcl          src/scan_to_pcl.cpp)
@@ -153,16 +153,16 @@ target_link_libraries(explo_sam_2d
   navigation_utils
 )
 
-target_link_libraries(simu_gazebo
-  ${catkin_LIBRARIES}
-  ${OCTOMAP_LIBRARIES}
-  navigation_utils
-)
+# target_link_libraries(simu_gazebo
+#   ${catkin_LIBRARIES}
+#   ${OCTOMAP_LIBRARIES}
+#   navigation_utils
+# )
 
-target_link_libraries(simu_explo
-  ${catkin_LIBRARIES}
-  ${OCTOMAP_LIBRARIES}
-)
+# target_link_libraries(simu_explo
+#   ${catkin_LIBRARIES}
+#   ${OCTOMAP_LIBRARIES}
+# )
 
 target_link_libraries(navigation
   ${catkin_LIBRARIES}
