--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,12 +124,12 @@ include_directories(
 
 add_library(navigation_utils    src/navigation_utils.cpp)
 # add_library(gpregressor         src/gpregressor.cpp)
-# add_library(gpregressor         src/covMaterniso3.cpp)
+# add_library(covMatern           src/covMaterniso3.cpp)
 
 ## Declare a cpp executable
 # add_executable(explo_octo_3d_node src/explo_octo_3d_node.cpp)
 add_executable(navigation           src/navigation_utils.cpp)
-add_executable(explo_sam_2d         src/explo_sam_2d.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
+add_executable(explo_sam_2d         src/explo_sam_2d.cpp )
 add_executable(explo_gp_2d          src/explo_gp_2d.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
 # add_executable(simu_explo           src/explo_octo_3d_node.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
 # add_executable(simu_gazebo          src/simu_gazebo.cpp)
@@ -167,9 +167,9 @@ target_link_libraries(explo_gp_2d
 #   navigation_utils
 # )
 
-# target_link_libraries(simu_explo
+# target_link_libraries(gp_test
 #   ${catkin_LIBRARIES}
-#   ${OCTOMAP_LIBRARIES}
+#   # covMatern
 # )
 
 target_link_libraries(navigation
