--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,13 @@ endif()
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  std_msgs
   geometry_msgs
   octomap_msgs
   octomap_ros
   octomap_server
   pcl_ros
-  roscpp
-  std_msgs
   move_base_msgs
   actionlib
   laser_geometry
@@ -122,22 +122,15 @@ include_directories(
 #   src/${PROJECT_NAME}/explo_octo_3d.cpp
 # )
 
-add_library(navigation_utils    src/navigation_utils.cpp)
-# add_library(gpregressor         src/gpregressor.cpp)
-# add_library(covMatern           src/covMaterniso3.cpp)
+add_library(navigation_utils            src/navigation_utils.cpp)
+# add_library(gpregressor               src/gpregressor.cpp)
+# add_library(covMatern                 src/covMaterniso3.cpp)
 
 ## Declare a cpp executable
-# add_executable(explo_octo_3d_node src/explo_octo_3d_node.cpp)
-add_executable(navigation           src/navigation_utils.cpp)
-# add_executable(explo_sam_2d         src/explo_sam_2d.cpp )
-add_executable(explo_sam_2d_new     src/explo_sam_2d_new.cpp )
-# add_executable(explo_gp_2d          src/explo_gp_2d.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
-add_executable(explo_gp_2d_new      src/explo_gp_2d_new.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
-# add_executable(simu_explo           src/explo_octo_3d_node.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
-# add_executable(simu_gazebo          src/simu_gazebo.cpp)
-add_executable(save_to_ply          src/save_ply.cpp)
-# add_executable(isam_ros             src/isam_example.cpp)
-add_executable(scan_to_pcl          src/scan_to_pcl.cpp)
+add_executable(jackal_exploration_da    src/explo_sam_2d_new.cpp )
+add_executable(jackal_exploration_gp    src/explo_gp_2d_new.cpp src/gpregressor.cpp  src/covMaterniso3.cpp)
+add_executable(scan_to_pcl              src/scan_to_pcl.cpp)
+# add_executable(isam_ros               src/isam_example.cpp)
 
 
 ## Add cmake target dependencies of the executable/library
@@ -146,47 +139,19 @@ add_executable(scan_to_pcl          src/scan_to_pcl.cpp)
 # add_dependencies(navigation move_base_msgs actionlib roscpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(explo_octo_3d_node
-#   ${catkin_LIBRARIES}
-# )
 
-# target_link_libraries(explo_sam_2d
-#   ${catkin_LIBRARIES}
-#   ${OCTOMAP_LIBRARIES}
-#   navigation_utils
-# )
-
-target_link_libraries(explo_sam_2d_new
+target_link_libraries(jackal_exploration_da
   ${catkin_LIBRARIES}
   ${OCTOMAP_LIBRARIES}
   navigation_utils
 )
 
-target_link_libraries(explo_gp_2d_new
+target_link_libraries(jackal_exploration_gp
   ${catkin_LIBRARIES}
   ${OCTOMAP_LIBRARIES}
   navigation_utils
 )
 
-
-# target_link_libraries(simu_gazebo
-#   ${catkin_LIBRARIES}
-#   ${OCTOMAP_LIBRARIES}
-#   navigation_utils
-# )
-
-# target_link_libraries(gp_test
-#   ${catkin_LIBRARIES}
-#   # covMatern
-# )
-
-target_link_libraries(navigation
-  ${catkin_LIBRARIES}
-)
-
-target_link_libraries(save_to_ply
-  ${catkin_LIBRARIES}
-)
 
 target_link_libraries(scan_to_pcl
   ${catkin_LIBRARIES}
